Changed website link to be correct

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       height="300px"
     />
     <p></p>
-    <a href="https://www.se.rit.edu/~swen-101/00/index.html">
+    <a href="https://www.rit.edu/study/software-engineering-bs">
       A link to the SE website</a
     >
     <h3>What I'd like to learn from the course</h3>
